bag fixes
